[package]
name = "excord-lr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version="*",features=['derive']}
# noodles = { version = "0.34.0", features = ["bam"] }
rust-htslib = { version = "*"}
bio-types={ version = "*"}
threadpool="*"